syntax = "proto2";

package stremio.core.runtime;

option java_package = "com.stremio.core.runtime";

import "stremio/core/runtime/event.proto";

message EnvError{
  required int32 code = 1;
  required string message = 2;
}

message RuntimeEvent {
  oneof event {
    NewState new_state = 1;
    CoreEvent core_event = 2;
  }

  message NewState {
  }
  message CoreEvent{
    required Event event = 1;
  }
}