syntax = "proto2";

package stremio.core.types;

option java_package = "com.stremio.core.types.api";

import "google/protobuf/timestamp.proto";
import "stremio/core/types/profile.proto";

message AuthRequest {
  oneof request {
    Login login = 1;
    LoginWithToken login_with_token = 2;
    Register register = 3;
  }

  message Login {
    required string email = 1;
    required string password = 2;
    required bool facebook = 3;
  }

  message LoginWithToken {
    required string token = 1;
  }

  message Register {
    required string email = 1;
    required string password = 2;
    required GDPRConsentRequest gdpr_consent_request = 3;
  }
}

message GDPRConsentRequest {
  required stremio.core.types.GDPRConsent gdpr_consent = 1;
  required google.protobuf.Timestamp time = 2;
  required string from = 3;
}
